--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--INICIO NAVBAR-->
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
         <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logoEmpresa"> Grupo I Soluciones Informáticas</a>
+                <a class="navbar-brand" href="#"><img src="./img/logo.jpeg" alt="logoEmpresa"> Grupo I Soluciones Informáticas</a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -408,7 +408,7 @@
             <div class="containerFooter">
                 <figure>
                     <a href="#">
-                        <img src="./img/logo.png" alt="Logo de Grupo I Soluciones Informaticas">
+                        <img src="./img/logo.jpeg" alt="Logo de Grupo I Soluciones Informaticas">
                     </a>
                 </figure>
             </div>
